List style solved without absolute position and horizontal scroll at about animation solved

--- a/src/components/presentation/Presentation.scss
+++ b/src/components/presentation/Presentation.scss
@@ -21,6 +21,7 @@
     &__img {
         display: flex;
         position: relative;
+        overflow: hidden;
 
         & img {
             width: 100%;
